4th commit, implemented featured and best sellers products.

--- a/lib/src/localization/app_ar.arb
+++ b/lib/src/localization/app_ar.arb
@@ -1,4 +1,21 @@
 {
-    "new_products": "المنتجات الجديدة",
-    "all": "مشاهدة الكل"
+  "account_blocked": "تم حظر حسابك. يرجى الاتصال بالدعم.",
+  "account_locked": "تم قفل حسابك بسبب محاولات تسجيل دخول فاشلة متعددة. يرجى المحاولة لاحقًا.",
+  "all": "مشاهدة الكل",
+  "best_sellers": "الأكثر مبيعًا",
+  "email_already_in_use": "عنوان البريد الإلكتروني هذا مستخدم بالفعل. يرجى تجربة عنوان آخر.",
+  "email_not_verified": "لم يتم التحقق من بريدك الإلكتروني. يرجى التحقق من صندوق الوارد الخاص بك.",
+  "featured_products": "المنتجات المختارة 😍",
+  "invalid_credentials": "البيانات التي قدمتها غير صحيحة. يرجى المحاولة مرة أخرى.",
+  "invalid_token": "الرمز المقدم غير صالح. يرجى طلب رمز جديد.",
+  "missing_token": "رمز المصادقة مفقود. يرجى تقديم رمز صالح.",
+  "new_products": "المنتجات الجديدة",
+  "otp_expired": "انتهت صلاحية رمز التحقق. يرجى طلب رمز جديد.",
+  "otp_invalid": "رمز التحقق الذي أدخلته غير صالح. يرجى المحاولة مرة أخرى.",
+  "password_expired": "انتهت صلاحية كلمة المرور الخاصة بك. يرجى إعادة تعيين كلمة المرور.",
+  "password_mismatch": "كلمتا المرور غير متطابقتين. يرجى المحاولة مرة أخرى.",
+  "session_expired": "انتهت صلاحية الجلسة الخاصة بك. يرجى تسجيل الدخول مرة أخرى.",
+  "too_many_attempts": "عدد محاولات تسجيل الدخول كبير جدًا. يرجى المحاولة مرة أخرى بعد فترة.",
+  "unauthorized": "غير مصرح لك بالوصول إلى هذه الموارد.",
+  "user_not_found": "لا يوجد حساب مرتبط بهذا البريد الإلكتروني."
 }
